# claude-repurpose

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
agents/: repurpose-community.md  repurpose-longform.md  repurpose-seo.md  repurpose-social.md  repurpose-visual.md
docs/: ARCHITECTURE.md
extensions/banana/: README.md  install.sh
scripts/: extract_article.py  extract_transcript.py  fetch_images.py  generate_html.py  transcribe_audio.py
skills/repurpose/: SKILL.md
skills/repurpose-calendar/: SKILL.md
skills/repurpose-facebook/: SKILL.md
skills/repurpose-instagram/: SKILL.md
skills/repurpose-linkedin/: SKILL.md
skills/repurpose-newsletter/: SKILL.md
skills/repurpose-quotes/: SKILL.md
skills/repurpose-reddit/: SKILL.md
skills/repurpose-seo/: SKILL.md
skills/repurpose-skool/: SKILL.md
skills/repurpose-twitter/: SKILL.md
skills/repurpose-youtube/: SKILL.md
skills/repurpose/references/: engagement-benchmarks.md  hook-formulas.md  image-prompts.md  image-sourcing.md  mistakes-to-avoid.md  platform-specs.md  poll-strategy.md  repurposing-frameworks.md  voice-adaptation.md
